--- a/code/tutorial.ipynb
+++ b/code/tutorial.ipynb
@@ -29,6 +29,8 @@
     "# Show figures inline with the code\n",
     "%matplotlib inline   \n",
     "\n",
+    "# hello\n",
+    "\n",
     "import theano\n",
     "import theano.tensor as T\n",
     "import theano.tensor.nlinalg as Tla\n",
